--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@
 [platformio]
 src_dir      = TFT
 boards_dir   = buildroot/boards
-default_envs = MKS_32_V1_4
+default_envs = BIGTREE_TFT35_V3_0
 
 [common]
 default_src_filter = +<src/*> -<src/Libraries> -<src/User/Hal/stm32f10x> -<src/User/Hal/stm32f2xx>
@@ -234,4 +234,4 @@ extra_scripts = pre:buildroot/scripts/custom_filename.py
 build_flags   = ${stm32f10x.build_flags}
   -DHARDWARE="MKS_32_V1_3" 
   -DMKS_32_V1_3=
-  -DVECT_TAB_FLASH=0x08007000  
+  -DVECT_TAB_FLASH=0x08007000
