Default disabled encoder support

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,9 @@
 ;BIGTREE_TFT24_V1_1
 ;MKS_32_V1_4
 ;MKS_32_V1_4_NOBL
+;MKS_32_V1_3
+;MKS_32_V1_2
+;MKS_32_V1_1
 
 [platformio]
 src_dir      = TFT
