--- a/platformio.ini
+++ b/platformio.ini
@@ -25,7 +25,7 @@
 [platformio]
 src_dir      = TFT
 boards_dir   = buildroot/boards
-default_envs = 
+default_envs = BIGTREE_TFT35_V3_0
 
 [common]
 default_src_filter = +<src/*> -<src/Libraries> -<src/User/Hal/stm32f10x> -<src/User/Hal/stm32f2xx>
