Onboard SD hangs on "Loading..."
Many users reported they cannot access the onboard SD, TFT hangs with "Loading..." message or they got an "Error" popup.

--- a/platformio.ini
+++ b/platformio.ini
@@ -95,7 +95,7 @@ build_flags = ${common.build_flags}
 # BIGTREE TFT35 V1.0
 #
 [env:BIGTREE_TFT35_V1_0]
-platform      = ststm32
+platform      = ststm32@9.0.0
 framework     = stm32cube
 board         = STM32F103VC
 upload_protocol = cmsis-dap
@@ -114,7 +114,7 @@ build_flags   = ${stm32f10x.build_flags}
 # BIGTREE TFT35 V1.1
 #
 [env:BIGTREE_TFT35_V1_1]
-platform      = ststm32
+platform      = ststm32@9.0.0
 framework     = stm32cube
 board         = STM32F103VC
 upload_protocol = cmsis-dap
@@ -133,7 +133,7 @@ build_flags   = ${stm32f10x.build_flags}
 # BIGTREE TFT35 V1.2
 #
 [env:BIGTREE_TFT35_V1_2]
-platform      = ststm32
+platform      = ststm32@9.0.0
 framework     = stm32cube
 board         = STM32F103VC
 upload_protocol = cmsis-dap
@@ -152,7 +152,7 @@ build_flags   = ${stm32f10x.build_flags}
 # BIGTREE TFT35 V2.0
 #
 [env:BIGTREE_TFT35_V2_0]
-platform      = ststm32
+platform      = ststm32@9.0.0
 framework     = stm32cube
 board         = STM32F103VC
 upload_protocol = cmsis-dap
@@ -172,7 +172,7 @@ monitor_speed = 250000
 # BIGTREE TFT35 V3.0
 #
 [env:BIGTREE_TFT35_V3_0]
-platform      = ststm32
+platform      = ststm32@9.0.0
 framework     = stm32cube
 board         = STM32F103VC
 upload_protocol = cmsis-dap
@@ -191,7 +191,7 @@ build_flags   = ${stm32f2xx.build_flags}
 # BIGTREE TFT35 E3 V3.0
 #
 [env:BIGTREE_TFT35_E3_V3_0]
-platform      = ststm32
+platform      = ststm32@9.0.0
 framework     = stm32cube
 board         = STM32F103VC
 upload_protocol = cmsis-dap
@@ -210,7 +210,7 @@ build_flags   = ${stm32f2xx.build_flags}
 # BIGTREE TFT43 V3.0
 #
 [env:BIGTREE_TFT43_V3_0]
-platform      = ststm32
+platform      = ststm32@9.0.0
 framework     = stm32cube
 board         = STM32F103VC
 upload_protocol = cmsis-dap
@@ -229,7 +229,7 @@ build_flags   = ${stm32f2xx.build_flags}
 # BIGTREE TFT50 V3.0
 #
 [env:BIGTREE_TFT50_V3_0]
-platform      = ststm32
+platform      = ststm32@9.0.0
 framework     = stm32cube
 board         = STM32F103VC
 upload_protocol = cmsis-dap
@@ -248,7 +248,7 @@ build_flags   = ${stm32f2xx.build_flags}
 # BIGTREE TFT70 V3.0
 #
 [env:BIGTREE_TFT70_V3_0]
-platform      = ststm32
+platform      = ststm32@9.0.0
 framework     = stm32cube
 board         = STM32F103VC
 upload_protocol = cmsis-dap
@@ -267,7 +267,7 @@ build_flags   = ${stm32f4xx.build_flags}
 # BIGTREE TFT28 V1.0
 #
 [env:BIGTREE_TFT28_V1_0]
-platform      = ststm32
+platform      = ststm32@9.0.0
 framework     = stm32cube
 board         = STM32F103VC
 upload_protocol = cmsis-dap
@@ -286,7 +286,7 @@ build_flags   = ${stm32f10x.build_flags}
 # BIGTREE TFT28 V3.0
 #
 [env:BIGTREE_TFT28_V3_0]
-platform      = ststm32
+platform      = ststm32@9.0.0
 framework     = stm32cube
 board         = STM32F103VC
 upload_protocol = cmsis-dap
@@ -305,7 +305,7 @@ build_flags   = ${stm32f2xx.build_flags}
 # BIGTREE TFT24 V1.1
 #
 [env:BIGTREE_TFT24_V1_1]
-platform      = ststm32
+platform      = ststm32@9.0.0
 framework     = stm32cube
 board         = STM32F105RC
 upload_protocol = cmsis-dap
@@ -324,7 +324,7 @@ build_flags   = ${stm32f10x.build_flags}
 # MKS TFT32 V1.1
 #
 [env:MKS_32_V1_1]
-platform      = ststm32
+platform      = ststm32@9.0.0
 framework     = stm32cube
 board         = STM32F107VC
 upload_protocol = stlink
@@ -345,7 +345,7 @@ build_flags   = ${stm32f10x.build_flags}
 # MKS TFT32 V1.2
 #
 [env:MKS_32_V1_2]
-platform      = ststm32
+platform      = ststm32@9.0.0
 framework     = stm32cube
 board         = STM32F107VC
 upload_protocol = stlink
@@ -366,7 +366,7 @@ build_flags   = ${stm32f10x.build_flags}
 # MKS TFT32 V1.3
 #
 [env:MKS_32_V1_3]
-platform      = ststm32
+platform      = ststm32@9.0.0
 framework     = stm32cube
 board         = STM32F107VC
 upload_protocol = stlink
@@ -387,7 +387,7 @@ build_flags   = ${stm32f10x.build_flags}
 # MKS TFT32 V1.4
 #
 [env:MKS_32_V1_4]
-platform      = ststm32
+platform      = ststm32@9.0.0
 framework     = stm32cube
 board         = STM32F107VC
 upload_protocol = stlink
@@ -407,7 +407,7 @@ build_flags   = ${stm32f10x.build_flags}
 # MKS TFT32 V1.4 No Bootloader
 #
 [env:MKS_32_V1_4_NOBL]
-platform      = ststm32
+platform      = ststm32@9.0.0
 framework     = stm32cube
 board         = STM32F107VC
 upload_protocol = stlink
@@ -428,7 +428,7 @@ build_flags   = ${stm32f10x.build_flags}
 # MKS TFT28 V1.0
 #
 [env:MKS_28_V1_0]
-platform      = ststm32
+platform      = ststm32@9.0.0
 framework     = stm32cube
 board         = STM32F107VC
 upload_protocol = stlink
